<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/orientation" />
		<TextView
			android:id="@+id/etOrientation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/gyro" />
		<TextView
			android:id="@+id/etGyro"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/magnetic" />
		<TextView
			android:id="@+id/etMagnetic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/gravity" />
		<TextView
			android:id="@+id/etGravity"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/linearAcc" />
		<TextView
			android:id="@+id/etLinearAcc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/temperature" />
		<TextView
			android:id="@+id/etTemerature"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/humidity" />
		<TextView
			android:id="@+id/etHumidity"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/light" />
		<TextView
			android:id="@+id/etLight"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/pressure" />
		<TextView
			android:id="@+id/etPressure"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:padding="10dp"
			android:layout_margin="2dp"
			android:background="@drawable/my_border"  />
	</LinearLayout>
</ScrollView>